# spark-data-lakehouse-pipeline-analytics-churn-ltv

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: manual_completo_implementacao.md
src/datagen/: generator.py  main.py
src/jobs/: agg_gold.py  ingestion_bronze.py  refine_silver.py  test_delta.py
src/lib/: logger.py  quality.py  spark_utils.py
src/ml/: train_churn.py  train_ltv.py
tests/: test_silver.py  test_smoke.py
